# mulesoft-integration

./: .gcloudignore  .gitignore  README.md  adk.yaml  adk_config.py  cmd-deploy.txt  deploy.py  pyproject.toml  salesforce_agent_manager.py  test_direct_endpoint.py
datastore_agent/: README.md  __init__.py  agent.py  deploy.py  test_local.py
endpoint_tests/: README.md  buscar_produto_test.py  historico_test.py  oportunidades_test.py  test_AgentEngine_endpoint.txt
team_agent_a2a/: .gitignore  README.md  __init__.py  check_config.py  requirements.txt
team_agent_a2a/data_ai_agent/: __init__.py  a2a_server.py  agent.py  agent_executor.py  tools.py
team_agent_a2a/orchestrator/: __init__.py  __main__.py  agent.py  config.py  prompts.py  remote_agent_connection.py
team_agent_a2a/product_search_agent/: __init__.py  a2a_server.py  agent.py  agent_executor.py  config.py  tools.py
team_agent_a2a/shared/: __init__.py  status_manager.py  utils.py
teams_agent/: __init__.py  a2a_client.py  a2a_fixtures.py  agent.py  logging_config.py  prompt.py  requirements.txt  utils.py
teams_agent/sub_agents/: __init__.py
teams_agent/sub_agents/contextualized_offer/: __init__.py  agent.py  buscar_historico_tool.py  prompt.py
teams_agent/sub_agents/contextualized_offer/context/: business_demands.txt  commercial_products.txt  user_history.txt
teams_agent/sub_agents/opportunity/: __init__.py  agent.py  prompt.py
teams_agent/tools/: __init__.py  a2a_client.py  data_ai_tool.py  salesforce_tools.py
